# sjobs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/sjobs/: __init__.py  sjobs.py
