[project]
name = "sjobs"
description = "Show Slurm jobs."
version = "0.3.2"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Environment :: Console",
]

requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/mvondomaros-lab/sjobs"
Issues = "https://github.com/mvondomaros-lab/sjobs/issues"
CI = "https://github.com/mvondomaros-lab/sjobs/actions"

[project.scripts]
sjobs = "sjobs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
