[project]
name = "sjobs"
version = "0.5.1"

authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "Show Slurm jobs."
readme = "README.md"
license = "MIT"

requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "tabulate>=0.9.0",
]

[project.scripts]
sjobs = "sjobs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
hatch = ">=1.14.1,<2"

[tool.pixi.pypi-dependencies]
sjobs = { path = ".", editable = true }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
hatchling = ">=1.27.0,<2"

[tool.pixi.package.run-dependencies]
click = ">=8.1.8"
tabulate = ">=0.9.0"
